syntax = "proto3";
option go_package = "./;pb";

// 用户基本数据
message UserInfo{
  int64 uid = 1;
  int64 create_at = 2;
  int64 delete_at = 3;

  int64 mobile = 4;
  string nickname = 5;
  string email = 6;
  int32 gender = 7;
  int32 role = 8;
  string avatar_url = 9;

  string password = 10; // hash
}

// 用户做题统计信息
message UserProblemStatistics{
  int64 uid = 1;
  int64 submit_count = 2;
  int64 accomplish_count = 3;
  int64 easy_problem_count = 4;
  int64 medium_problem_count = 5;
  int64 hard_problem_count = 6;
}

// 用户提交记录
message UserSubmitRecord{
  int64 uid = 1;
  int64 problem_id = 2;
  string code = 3;
  bytes result = 4;
  string lang = 5;
  int64 stamp = 6;
}